--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
 		/* 6个三人工位 */
 		for(var m=0,x1=120,x2=165;m<6;m++){
-			ctx.drawImage(imgB,x1,870);
-			ctx.drawImage(imgB,x2,870);
-			ctx.drawImage(imgB,(x1+x2)/2,910);
+			ctx.drawImage(img,x1,870);
+			ctx.drawImage(img,x2,870);
+			ctx.drawImage(img,(x1+x2)/2,910);
 			x1+=100;x2+=100;
 		}
 
