--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<style>
 		*{padding:0;margin:0;}
 		canvas {
-			margin:10px 50px;
+			display:block;
+			margin:0 auto;
 			background: #E1EFF2;
 		}
 		div.introduce {
