--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			padding-left: 60px;
 			height:50px;
 			line-height: 50px;
+			display:inline-block;
+			margin-right:20px;
 		}
 		div.introduce div.intr_1{
 			background: url(img/chair01.png) no-repeat;
