--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- 设置 viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- IE -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- 兼容国产浏览器的高速模式 -->
+    <meta name="renderer" content="webkit">
 	<title>办公租赁</title>
 	<link rel="stylesheet" href="">
 	<style>
 		*{padding:0;margin:0;}
-		canvas {
-			display:block;
-			background: #E1EFF2;
-		}
+		
 		div.introduce {
 			padding:50px 15px 15px 15px;
 		}
@@ -18,8 +20,8 @@
 			padding-left: 60px;
 			height:50px;
 			line-height: 50px;
-			display:inline-block;
-			margin-right:20px;
+			display: inline-block;
+			margin-right: 20px;
 		}
 		div.introduce div.intr_1{
 			background: url(img/chair01.png) no-repeat;
@@ -33,12 +35,33 @@
 			background: url(img/chair03.png) no-repeat;
 			background-position: 9px 9px;
 		}
+
+		#canvasBox {
+			width:100%;
+			height: 414px;
+		}
+		#canvasBox div {
+			width:100%;
+			height:100%;
+			position: relative;
+			overflow: hidden;
+		}
+		#canvasBox div canvas {
+			background: #E1EFF2;
+			position: absolute;
+			top:0;
+			left: 0;
+		}
 	</style>
 </head>
 <body>
-	<canvas id="myCanvas" width="1200" height="1200">
-		您的浏览器不支持H5 canvas标签
-	</canvas>
+	<section id="canvasBox">
+		<div>
+			<canvas id="myCanvas" width="1200" height="1200">
+				您的浏览器不支持H5 canvas标签
+			</canvas>
+		</div>
+	</section>
 	<div class="introduce">
 		<div class="intr_1">可选</div>
 		<div class="intr_2">已选</div>
