--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			padding:50px 15px 15px 15px;
 		}
 		div.introduce div{
-			padding-left: 60px;
+			padding-left: 40px;
 			height:50px;
 			line-height: 50px;
 			display: inline-block;
@@ -25,15 +25,18 @@
 		}
 		div.introduce div.intr_1{
 			background: url(img/chair01.png) no-repeat;
-			background-position: 9px 9px;
+			background-position: 17px 9px;
+			background-size:19px 16px;
 		}
 		div.introduce div.intr_2{
 			background: url(img/chair02.png) no-repeat;
-			background-position: 9px 9px;
+			background-position: 17px 9px;
+			background-size:19px 16px;
 		}
 		div.introduce div.intr_3{
 			background: url(img/chair03.png) no-repeat;
-			background-position: 9px 9px;
+			background-position: 17px 9px;
+			background-size:19px 16px;
 		}
 
 		#canvasBox {
